# tangelo

./: .gitignore  CLAUDE.md  README.md  base.in  manage.py  pyproject.toml  requirements.txt
gallery/: admin.py  context_processors.py  forms.py  models.py  utils.py  views.py
gallery/migrations/: 0001_initial.py  0002_imagepage_title.py  0002_simplepage_slug.py  0003_categorypage_slug.py  0003_image_taken.py  0004_alter_album_options_image_image_api_data.py  0004_alter_categorypage_slug.py  0005_remove_image_description.py  0005_rename_categorypage_category_rename_imagepage_image.py  0006_alter_category_options_image_description_and_more.py  0006_image_albums.py  0007_alter_image_description.py  0007_copy_album_fk_to_m2m.py  0008_alter_category_about_alter_image_flickr_id.py  0008_remove_image_album_fk.py  0009_image_album_order.py  0010_category_cat_thumb.py  0011_alter_image_album_order.py  0012_alter_image_flickr_id.py  0013_category_order.py  0014_alter_image_album_order.py  0015_album_remove_image_categories_and_more.py  0016_image_album_alter_album_cat_thumb.py  0017_alter_image_options_alter_image_album_order.py  0018_alter_image_album_order.py  0019_simplepage.py
gallery/templatetags/: album_thumb.py  image_thumb.py  render_thumbnail.py
tangelo/: asgi.py  db.sqlite3  manage.py  urls.py  wsgi.py
tangelo/config/: config.py  settings.py
tangelo/gallery/: apps.py
tangelo/tangelo/: asgi.py  config.py  settings.py  urls.py  wsgi.py
tangelo/templates/: 404.html  about.html  add_image.html  (+7 more)
templates/: base.html  category.html  home.html  image.html
(+6 files in other folders)
