[project]
name = "tangelo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "black",
    "dateutils",
    "dj-database-url",
    "django",
    "django-crispy-forms",
    "crispy-bootstrap4",
    "django-extensions",
    "django-markdownify",
    "fabric",
    "flake8",
    "flickrapi",
    "goodconf",
    "gunicorn",
    "icecream",
    "psycopg2-binary",
    "redis",
    "ruamel.yaml",
]
